<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.tinyradius</groupId>
	<artifactId>tinyradius</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>TinyRadius Java Radius Library</name>
	<description>
		TinyRadius is a simple, small and fast Java Radius library capable of sending and receiving Radius packets of all types. It is released under the terms of the LGPL.
	</description>
	<url>https://github.com/ctran/TinyRadius</url>
	<developers>
		<developer>
			<id>wuttke</id>
			<name>Matthias Wuttke</name>
			<email>mw@teuto.net</email>
			<timezone>CEST</timezone>
		</developer>
		<developer>
			<id>ctran</id>
			<email>cuong.tran@gmail.com</email>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>Lesser General Public License (LGPL)</name>
			<url>${project.basedir}/LICENSE</url>
			<distribution>local</distribution>
		</license>
	</licenses>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.seancfoley</groupId>
			<artifactId>ipaddress</artifactId>
			<version>5.3.3</version>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<compilerArgs>-Xlint:unchecked</compilerArgs>
					<!-- Release directive requires mvn 3.6 and Java 9 or later -->
					<release>8</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
				<version>2.22.2</version>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>ctran-maven-repo</id>
			<name>ctran-maven</name>
			<url>https://api.bintray.com/maven/ctran/maven/tinyradius/;publish=1</url>
		</repository>
	</distributionManagement>
</project>
